--- a/app/globals.css
+++ b/app/globals.css
@@ -75,7 +75,7 @@ body {
   }
   
   main {
-	@apply bg-gray-100 shadow-md;
+	@apply  shadow-md;
   }
   
 
@@ -162,5 +162,5 @@ body {
   }
 
   .shadow-custom {
-	box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+	box-shadow: 2px 4px 8px 8px rgba(0, 0, 0, 0.2);
   }
